# Algorithm_Visualizer

./: .gitignore  LICENSE  LICENSE.md  README.md  mise.toml  poetry.toml  pyproject.toml  setup_and_run.bat
src/algorithm_visualizer/: __init__.py  bfs.py  dfs.py  main.py
src/algorithms/: bfs.py  bidirectional.py  dfs.py  dls.py  iddfs.py  ucs.py
src/logic/: app.py  simulation_manager.py
src/ui/: grid.py  menu.py
src/utils/: config.py  grid.py
