[project]
name = "algorithm-visualizer"
version = "0.1.0"
description = "A high-performance algorithm visualizer"
authors = [
    {name = "za-coding-paradox & Mtz00"}
]
readme = "README.md"
requires-python = ">3.14"
dependencies = [
    "pygame-ce (>=2.5.6,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pygame-gui (>=0.6.14,<0.7.0)"
]

[dependency-groups]
dev = [
    "ruff (>=0.15.1,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
